crates/analyzer/tests/snapshots/errors__invalid_contract_field.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: No field `bar` exists on this contract
  ┌─ compile_errors/invalid_contract_field.fe:5:14
  │
5 │         self.bar
  │              ^^^ undefined field


